--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             iframe.src = src;
             iframe.width = "600";
             iframe.height = "400";
-            iframe.id="myfrrame";
+            iframe.id="myframe";
             document.body.appendChild(iframe);
 
             iframe.onload = function () {
