--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <title>XSS Payloads Extended</title>
 </head>
 <body>
+<text>}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}}</text>
 <h1>Extended XSS Payloads - Alert(1)</h1>
 
 <button onclick="alert(1)">Click me - onclick</button>
