--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script>document.domain</script>
+    <script>alert(document.domain)</script>
 </body>
 </html>
