--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Iframe Page</title>
+  <script>
+    window.onload = function() {
+      const iframe = document.createElement('iframe');
+      iframe.src = "javascript:alert(document.domain)";
+      iframe.style.visibility = "hidden";
+      iframe.style.width = "0px";
+      iframe.style.height = "0px";
+      iframe.style.border = "none";
+      document.body.appendChild(iframe);
+    };
+  </script>
+</head>
+<body>
+  <h3>This page creates a hidden iframe dynamically.</h3>
+</body>
+</html>
