--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
   <script>
     window.onload = function() {
       const iframe = document.createElement('iframe');
-      iframe.src = "javascript:alert(document.domain)";
       iframe.style.visibility = "hidden";
       iframe.style.width = "0px";
       iframe.style.height = "0px";
       iframe.style.border = "none";
       document.body.appendChild(iframe);
+      iframe.src = "javascript:alert(document.domain)";
     };
   </script>
 </head>
 <body>
-  <h3>This page creates a hidden iframe dynamically.</h3>
+  <h3>This page creates a hidden iframe with javascript: URL.</h3>
 </body>
 </html>
