--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       iframe.style.height = "0px";
       iframe.style.border = "none";
       document.body.appendChild(iframe);
-      iframe.src = "javascript:alert(document.domain)";
+      iframe.src = "javascript:alert(document.domain)//://";
     };
   </script>
 </head>
