--- a/63826187321312836671273721.html
+++ b/63826187321312836671273721.html
@@ -7,7 +7,7 @@
 <body>
   <h2>Attacker Page</h2>
 
-  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=937718&tid=demon-lords-career-change&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=eYD%2Bd5HHyd0Cj09e7k41MgSByEJvVj7Og%2BGnoMQqJmMkHJHeOvBI6U5NyMlnMPEP%2BSWa3maupmFaMP7NcmeGDUAhpAilho1f5YiVwQIRZTTl8c2%2FAWou46BmEaSCvDxBo2l0OiN0zsgESrFj3nFLcqNd%2BO6gUKQRgfI4Nlu%2FebgxfDC6J63liRfKiMX%2BRU6aCATyJH19%2BTPGW8aL9zCX14ci1Y4DYhsn2hI%2FqW%2FG6LpHY3SQ5KNlRuDpgzGzeGQpp12Rz4VeO60z2%2Bps2xnR%2F5Z3VhI%3D&domain=https%3A%2F%2Fwww.nutaku.net" width="500" height="300"></iframe>
+  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=937718&tid=demon-lords-career-change&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=3JWaBI3hy7wI6Kw5V2gUMd6sCDHt0jOunTIL%2Bwy4ZfazGSvsbmTUMQGwazqOSJBG06qHGOgSGBKB%2FgyZEXN1SqLUFOgk6Gpp4byQY3uajaTstPnlEjJffRM%2Fldr4RnmSBBCTqiEoE1BERjNAp%2B0IUVNRThwAQQQhP4QEhN%2Fz8zM5mG1TI7Fk31VAp3eQZ2%2FNq9qRFAkUwagstOm7LeBJw2dV1H%2FioZDXWQIKlC%2FQikioYF0p%2BObYdzdwJV5vwyhkGbjJMg%3D%3D&domain=https%3A%2F%2Fwww.nutaku.net" width="500" height="300"></iframe>
 
   <script>
     // Wait until the iframe loads
