--- a/63826187321312836671273721.html
+++ b/63826187321312836671273721.html
@@ -7,7 +7,7 @@
 <body>
   <h2>Attacker Page</h2>
 
-  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=937718&tid=demon-lords-career-change&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=3JWaBI3hy7wI6Kw5V2gUMd6sCDHt0jOunTIL%2Bwy4ZfazGSvsbmTUMQGwazqOSJBG06qHGOgSGBKB%2FgyZEXN1SqLUFOgk6Gpp4byQY3uajaTstPnlEjJffRM%2Fldr4RnmSBBCTqiEoE1BERjNAp%2B0IUVNRThwAQQQhP4QEhN%2Fz8zM5mG1TI7Fk31VAp3eQZ2%2FNq9qRFAkUwagstOm7LeBJw2dV1H%2FioZDXWQIKlC%2FQikioYF0p%2BObYdzdwJV5vwyhkGbjJMg%3D%3D&domain=https%3A%2F%2Fwww.nutaku.net" width="500" height="300"></iframe>
+  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=iOS3jc9Sug%2FMlhdpM%2FZhIDQLZ%2FGmhBND5O3Naj55jaoA%2BNFnvi5PY58T3WV4hDWkEQIGFiMh8EruKAKgqOGiLcpDZWDoBaPiQM9AVrifTdrphdoztJUx2PsGbFO%2FGkmHrMlVkZdsitITDLv%2FWlDyH6Rvr4O4KxwxfryATH%2BFN1dtcE46etSB3d1fsjBwkR2UgUwgFvG0X6jXk2swfkhVPHqFg1lI43%2Ba3LsdWyGCOBqACnrQcXCrCfuF81WAf8eNaG5L%2FXkCL12%2BsnF4I82VIYE5%2BlA%3D&domain=https%3A%2F%2Fwww.nutaku.net&domain=https%3A%2F%2Fwww.nutaku.net" width="500" height="300"></iframe>
 
   <script>
     // Wait until the iframe loads
