--- a/63826187321312836671273721.html
+++ b/63826187321312836671273721.html
@@ -7,7 +7,7 @@
 <body>
   <h2>Attacker Page</h2>
 
-  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=iOS3jc9Sug%2FMlhdpM%2FZhIDQLZ%2FGmhBND5O3Naj55jaoA%2BNFnvi5PY58T3WV4hDWkEQIGFiMh8EruKAKgqOGiLcpDZWDoBaPiQM9AVrifTdrphdoztJUx2PsGbFO%2FGkmHrMlVkZdsitITDLv%2FWlDyH6Rvr4O4KxwxfryATH%2BFN1dtcE46etSB3d1fsjBwkR2UgUwgFvG0X6jXk2swfkhVPHqFg1lI43%2Ba3LsdWyGCOBqACnrQcXCrCfuF81WAf8eNaG5L%2FXkCL12%2BsnF4I82VIYE5%2BlA%3D&domain=https%3A%2F%2Fwww.nutaku.net&domain=https%3A%2F%2Fwww.nutaku.net" width="500" height="300"></iframe>
+  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=zmdhZZRryl9Y%2FQCj3nCCmDRmPAZ0EekqZitXiMdPborMcKZPD%2BTaHMXpySRwIVZrbOSKp3wY7BEn4ncnON8laleJMdQ7catWE2C4YsG7CiJeaky7C2caa3vHX0h037ZJEnMJqPTaWcqYUvyJ4%2F%2FcenudZqkEK6rXh7AfoRvIiie8zKlFGTFhKxLhNnBn6WfndYwn0XCidph8Ou2z9yhJGTm6EROTTJXyuWi59livxjGV3%2BRKIsDXoJJXeNHnG4fkZeOmDytR4Y%2FERTkgrtOEzR2afek%3D&domain=https%3A%2F%2Fwww.nutaku.net" width="500" height="300"></iframe>
 
   <script>
     // Wait until the iframe loads
