--- a/63826187321312836671273721.html
+++ b/63826187321312836671273721.html
@@ -7,7 +7,7 @@
 <body>
   <h2>Attacker Page</h2>
 
-  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=zmdhZZRryl9Y%2FQCj3nCCmDRmPAZ0EekqZitXiMdPborMcKZPD%2BTaHMXpySRwIVZrbOSKp3wY7BEn4ncnON8laleJMdQ7catWE2C4YsG7CiJeaky7C2caa3vHX0h037ZJEnMJqPTaWcqYUvyJ4%2F%2FcenudZqkEK6rXh7AfoRvIiie8zKlFGTFhKxLhNnBn6WfndYwn0XCidph8Ou2z9yhJGTm6EROTTJXyuWi59livxjGV3%2BRKIsDXoJJXeNHnG4fkZeOmDytR4Y%2FERTkgrtOEzR2afek%3D&domain=https%3A%2F%2Fwww.nutaku.net" width="500" height="300"></iframe>
+  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=Tk0FrgsFnQt7BOERRtfN9WhqkXplVDKhPdI%2BdMnxvQw8fI4sXVpSst8XS57FUfwwBq%2FuIH7gTdvNso%2BTAOUrOW0cH6%2FyVk20aePZRkcaCV8zKGpX6VpzmMlFAxG5wG5uCC2MwimDUI3HPGUo9XTkobCvbzQU5C0lWA4jvfug8dz7f45g%2BnfxF%2FjupAH%2BOKdk4QTkm7pNqwdgkO9I6byHOL0W5HJehlu7VGm2%2FIpsq7q1bzhuovd8%2B3NEea5%2BwN6McAhwtrvEPBqqEa9Vs%2FFJUhS7t1A%3D&domain=https%3A%2F%2Fwww.nutaku.net" width="500" height="300"></iframe>
 
   <script>
     // Wait until the iframe loads
