--- a/63826187321312836671273721.html
+++ b/63826187321312836671273721.html
@@ -7,7 +7,7 @@
 <body>
   <h2>Attacker Page</h2>
 
-  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=Tk0FrgsFnQt7BOERRtfN9WhqkXplVDKhPdI%2BdMnxvQw8fI4sXVpSst8XS57FUfwwBq%2FuIH7gTdvNso%2BTAOUrOW0cH6%2FyVk20aePZRkcaCV8zKGpX6VpzmMlFAxG5wG5uCC2MwimDUI3HPGUo9XTkobCvbzQU5C0lWA4jvfug8dz7f45g%2BnfxF%2FjupAH%2BOKdk4QTkm7pNqwdgkO9I6byHOL0W5HJehlu7VGm2%2FIpsq7q1bzhuovd8%2B3NEea5%2BwN6McAhwtrvEPBqqEa9Vs%2FFJUhS7t1A%3D&domain=https%3A%2F%2Fwww.nutaku.net" width="500" height="300"></iframe>
+  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=RzHl5mTEl5XyT5Sn013AQnvvrN1E1qK%2BLdfRA9WMzekISYXPWzt6K%2BbT4ewoC%2F%2FocRh77AqELBl1afcudxLdt0%2FCHXf7jJLzdsnHEcE4ECttTbY9JypQZgp0u7pENk69DgS2REnzkOZoOpelwragePrb3%2FLB7WU1RA0I%2BsqR5s3tU1UVbvwtunw6vy5ZASnU1EO9vWDi1KF2WHOwyoUGYV1DpLaB6edgIOXMmuCxGdlyVUa4Qn7kE%2FC48loWUo%2FQhcaRYHWIpLghi2MFTU64vInG6Ug%3D&domain=https%3A%2F%2Fwww.nutaku.net" width="500" height="300"></iframe>
 
   <script>
     // Wait until the iframe loads
