--- a/63826187321312836671273721.html
+++ b/63826187321312836671273721.html
@@ -7,7 +7,7 @@
 <body>
   <h2>Attacker Page</h2>
 
-  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=RzHl5mTEl5XyT5Sn013AQnvvrN1E1qK%2BLdfRA9WMzekISYXPWzt6K%2BbT4ewoC%2F%2FocRh77AqELBl1afcudxLdt0%2FCHXf7jJLzdsnHEcE4ECttTbY9JypQZgp0u7pENk69DgS2REnzkOZoOpelwragePrb3%2FLB7WU1RA0I%2BsqR5s3tU1UVbvwtunw6vy5ZASnU1EO9vWDi1KF2WHOwyoUGYV1DpLaB6edgIOXMmuCxGdlyVUa4Qn7kE%2FC48loWUo%2FQhcaRYHWIpLghi2MFTU64vInG6Ug%3D&domain=https%3A%2F%2Fwww.nutaku.net" width="500" height="300"></iframe>
+  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=ALrYUdKY9LevUO2JWSJpnXeHRQGufl%2F%2BwqwMy09MNYcYM4JL5rR7gVsWULaPj3wq8Ji%2Br87OfFW6%2BSzhqAOR3jo2Jasw4WE6qQokRkZy2i3qjAOXlR4aUTTmRZaRJ1gaucCgIWgejBS8OmbKRsc6T46NgEJDmQA%2FCT4DY7o8AkxCWY5XTHnJDKUjrAxtxnlCNKrQAoNBcbzFkGnuOPH1L2o%2BKgPz%2BGqcHj0mN0Htp6687BqHgPIgj%2FZXBH%2BqZSpKmeUhVcFh%2FcpsIUGw%2F0x46z9Dd6w%3D&domain=https%3A%2F%2Fwww.nutaku.net" width="500" height="300"></iframe>
 
   <script>
     // Wait until the iframe loads
