--- a/63826187321312836671273721.html
+++ b/63826187321312836671273721.html
@@ -7,7 +7,7 @@
 <body>
   <h2>Attacker Page</h2>
 
-  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=W5RdjsgLoDdyZJcRV%2BNIctLtDqpkM26RZiVOI6lK8pzC4MilqfruaP0qua7Z%2BhSQwJnADWDlAhN%2B87V9ndcqMOYc6bVx0dhpx1sSV7GQ1mcc%2BSV7j3jE45JhDMQMJsl5y0M3Hj7o1UBZbPzSHLBG89u%2Fh2vmXIPSbIhFhQz2is2j0RhTUiT8VfHI1vgAQcN8LTuQCNY4C%2Bf27T1fHC9CkiR%2FeYDuUO%2FUAaRHcO37hhYMILkgri9Sc6nRU9KxyOQZmmDud0G9zGQgpub8E0V8pbi4KLU%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
+  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=T%2BR%2F3gMyw1KFtLA1ex%2FAvvxnIy0EOHv2HBEAlJ56ZfabDprGUqbHbaWsx9uvhtfypKj8Z%2FKHqCuHIAJ2tqF7ry1y772XbhmlpLaX0Ex8M6dmAUKNtDK87yaZ%2FzTRTsjGLeFPrcIwBmUd2YAVvYXRZOMrE7lTMlhxEJLNyAAzohHzEA9N319avXd3JXgJaB4uZCSqZKj1Ec8n9Pi0N6aaQ99wDJFmQqTd9eoVp1nOioYZQzIBjVN7hPi6oAM27Iqy%2FyI93bBMDCmMHuem6SxMmxiF0zI%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
 
   <script>
     // Wait until the iframe loads
