--- a/63826187321312836671273721.html
+++ b/63826187321312836671273721.html
@@ -7,7 +7,7 @@
 <body>
   <h2>Attacker Page</h2>
 
-  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=z8tpzDIh2RQigAYRtNMJhRTfqehwG8S08uBU0s6C1gQEzUhSkeVuicl7lkA07SJ6yR9nWBLuY7ljrgSvh52x%2F6MSLvHT6ouBQkxCCgHBCk28yGPbW%2FXcXVwRBi%2FnwUoo1lCpd9gunknX3VKrZOjNq1LEA2JoyG%2Ft0Mlqp3Pl6dqImon2aAZMAfllFt7mkyutdJcFrFsMaBqGKDIgjTzLJKYj3dJSld94FuJm91h1i8ehsa1P7keM81YISTxgSi%2FjgzgUlut6lD%2BeJ9VqgkR%2F3EAkNjw%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
+  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=wQDTtZEVqIWN3v06jId5tJ2pZvic1raEsEPpmGrs5CMoSNYaxGHV8Ewgm2864tbDzS7M%2FeLEwJB0gk1AJ7fsAMWf0JpCP4YrwHmlzqxlAz0GvnAfwwnXU0zaJLjDzrzddhW7MJpaqRtWh%2B26ZZspNqhQ06Q%2F0YwC1huVIp377NzmttAaSy8%2FcsqnDRy%2BWEacb7uu5%2BPfURzzMnkT17zssmDuCg2r%2BR2nRkss2mavpR27SNdzlUavEzB%2BnbPgjZwLNr903HrWBUHpve24e36RgQJlRDc%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
 
   <script>
     // Wait until the iframe loads
