--- a/63826187321312836671273721.html
+++ b/63826187321312836671273721.html
@@ -7,7 +7,7 @@
 <body>
   <h2>Attacker Page</h2>
 
-  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=aBZK%2BoGUk%2FdDc3FuBNiBxeEUcsIA43a8V92Iy85jP2qW5Ji5IUf43lEmxZ8S0VsJZhMhLsPUP1e3PpOahkOnt9d%2FCPjJ28r9bc1HiLzkhrnGKTor7e%2BK4YLvdfZFUrcTi32HawFO%2FmbcesOP47mm8ClpGg2osK9rJGMcVbp3Nq9gVkzXmy5432a64ak3%2Bp0E%2FEotgNWN1%2B4j1GAOVe4kru5ipPL5c06RbAPpf%2BCcwIcIvL2Gc4m0lNjVXO2OaLsB80at%2BT2lkF3nfK0B8wYObM9qIvY%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
+  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=14eDjNXrigWbEI8jQoDXLyW%2FCS2qeimt0NYb99TdqdY8qfqG40dwp9OAaUTQsdgoRtG81NobNwgvW23XmkfvfGOeFtDPDuPyfRdu0iqGQK30txGBSWKIMrMIf27LQ4x8lE87IcSpol87ywmILQh%2FFm3G11l1Kmo1%2Fr%2F5Ej42rN9kMVP6YfCkamSvoJWckY9Jn33YaEZAymuv63KuSFQBxNY1r0eIfT4PpHtVZ6k2%2FB9IILObcqO3P1K2lIi4CgWxRMXTqlbyy4eOLVblXLc9Fi8L%2FY0%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
 
   <script>
     // Wait until the iframe loads
