--- a/63826187321312836671273721.html
+++ b/63826187321312836671273721.html
@@ -7,7 +7,7 @@
 <body>
   <h2>Attacker Page</h2>
 
-  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=14eDjNXrigWbEI8jQoDXLyW%2FCS2qeimt0NYb99TdqdY8qfqG40dwp9OAaUTQsdgoRtG81NobNwgvW23XmkfvfGOeFtDPDuPyfRdu0iqGQK30txGBSWKIMrMIf27LQ4x8lE87IcSpol87ywmILQh%2FFm3G11l1Kmo1%2Fr%2F5Ej42rN9kMVP6YfCkamSvoJWckY9Jn33YaEZAymuv63KuSFQBxNY1r0eIfT4PpHtVZ6k2%2FB9IILObcqO3P1K2lIi4CgWxRMXTqlbyy4eOLVblXLc9Fi8L%2FY0%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
+  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=rKdhnSWYyAbHYCXecZ%2FRR5nDGmatEo%2BuJOzO2XWpvAvED%2Fqo8fAwiQN2CpqRFmYD4eiil5C5P%2BfO4BG63oPkFtkWKXnzSTb3CzbILTpL75HTcjBgbXo41Jjj8H5YLiOL3lSv3jj753IiIinSBwQNkGP9VE2T6%2B3YHs1%2BFvoTa3r6QJXlP3vE68u9u75EMGgBk4J0UVSJ6svxBYIhp73TJbEzkdzreh3jnOStS%2FRdyX1dlNWGVBv7Bkv4sNrtR9cWBCkeEZ0U%2BW%2FDrJ4EYdUrJZoey5U%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
 
   <script>
     // Wait until the iframe loads
