--- a/63826187321312836671273721.html
+++ b/63826187321312836671273721.html
@@ -7,7 +7,7 @@
 <body>
   <h2>Attacker Page</h2>
 
-  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=ZWJ2LMBl0q0PKNtGUdBwqPtTLmxGF82roP%2F2WxON5%2Be5tB0zN6jfSHfXt7efRZVxq8dntwdSBBW0qvPiDeRPu1H5diY9kEB6yTezGZchIfK6esF%2BEbb4mM0WH%2BW%2BOVng%2FcI4BIUWDiK98v59QYmM52AIGK63GDdrxiPI72zXL97z76LrbCtLdWxZjR9aaJIO0B%2BtvqEWQ%2FC4nWCRJ9nJWxWbT%2FLu%2BhrHw91p%2FZ5lYkOtGUsLbOqxqRtnuSHcKozKY7f1j5RaRiexWj09SvnGUexNkhg%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
+  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=STcaf%2B4x7Hyz7bLce63qOpPHt7Hb6cRZUGCMjpg89JZ5ekYJ6JnUndDeRNnQdBagSPFdwS%2BmjPVDZCxgR3gNHDKg6PgO%2BwtIjlI%2FzpIwvCHC2s%2Bqwc8VaG1QY2B4JmNoX4AI8PEcdt7yOkNKkWBDvI3qZXNWvnJBBLRtwe1VEYukTOE8QwNEFlayXXL7bLXA%2F%2BXSZvyr0dLJ0fLcaBHQGVdUUyPR0sJ3LUREwnMl9HoQb4NpzMkL9yCeixLAcpMwAu3%2BbxOhD%2BvxGxjiGoweoa7V5co%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
 
   <script>
     // Wait until the iframe loads
