--- a/63826187321312836671273721.html
+++ b/63826187321312836671273721.html
@@ -7,7 +7,7 @@
 <body>
   <h2>Attacker Page</h2>
 
-  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=STcaf%2B4x7Hyz7bLce63qOpPHt7Hb6cRZUGCMjpg89JZ5ekYJ6JnUndDeRNnQdBagSPFdwS%2BmjPVDZCxgR3gNHDKg6PgO%2BwtIjlI%2FzpIwvCHC2s%2Bqwc8VaG1QY2B4JmNoX4AI8PEcdt7yOkNKkWBDvI3qZXNWvnJBBLRtwe1VEYukTOE8QwNEFlayXXL7bLXA%2F%2BXSZvyr0dLJ0fLcaBHQGVdUUyPR0sJ3LUREwnMl9HoQb4NpzMkL9yCeixLAcpMwAu3%2BbxOhD%2BvxGxjiGoweoa7V5co%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
+  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=6ShROpEuKMNsBBG3rN7k%2BsXDIj3z2bepL3eX02nqGlF74jGXgIbctek0UMQ1m21pNuVL%2FkArtqTKO40P21z7InGjYrro64FgG7y6dh5%2FWN1AEbMO0CspFmcRa6%2Bgcmuv1f%2F7XPujcuKZx3Amj8Ckwg8Y5faTUTsWtWSZnFPWeMUwHzET5zLdIRYG6euFcb%2F%2FESIFo5Z0dKawwRM9dnWJmY8PJEJ%2FGFANCy10eaKs2TKf11wLLm%2BTETIK3%2Bs3EGVTipXZ9prMplp85Gjbf%2BBUDTWkptg%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
 
   <script>
     // Wait until the iframe loads
