--- a/63826187321312836671273721.html
+++ b/63826187321312836671273721.html
@@ -7,7 +7,7 @@
 <body>
   <h2>Attacker Page</h2>
 
-  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=6ShROpEuKMNsBBG3rN7k%2BsXDIj3z2bepL3eX02nqGlF74jGXgIbctek0UMQ1m21pNuVL%2FkArtqTKO40P21z7InGjYrro64FgG7y6dh5%2FWN1AEbMO0CspFmcRa6%2Bgcmuv1f%2F7XPujcuKZx3Amj8Ckwg8Y5faTUTsWtWSZnFPWeMUwHzET5zLdIRYG6euFcb%2F%2FESIFo5Z0dKawwRM9dnWJmY8PJEJ%2FGFANCy10eaKs2TKf11wLLm%2BTETIK3%2Bs3EGVTipXZ9prMplp85Gjbf%2BBUDTWkptg%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
+  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=pHMnD5xpQ2w%2BkXfzngx%2FPq8jw%2BhitxkREV1w4PMTaeeWP9N1SBdaoRPqj7FJqNFSTtER%2BsODcD0Rl3lmTAAl0TdvuePC6%2BOMruEDpxKwH%2FZV%2BEz7I4n4xxvHvbeEGjs7IdG%2FltWK3357yvYAgfK0r4vkkbURc0QRD7aWZpdyRmE7hs6IdYFxLa2KijjkZsotcGjtjDozQGZ6rAmr5F1ASLYfG7WLv6gYMwqe7LW0OcEj5Xumr%2FWN5iJLwBfTCxzySl25OZzJA%2FyVfk4OhWMGxzRTzGo%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
 
   <script>
     // Wait until the iframe loads
